feat: step-flow works; fix minor bugs