@@ -6,11 +6,12 @@ import br.com.metaro.portal.core.dto.info.HomeInfoDto;
 import br.com.metaro.portal.core.repositories.UserRepository;
 import br.com.metaro.portal.modules.general.memorando.entities.MemorandoStatus;
 import br.com.metaro.portal.modules.general.memorando.repository.MemorandoRepository;
-import br.com.metaro.portal.modules.general.post.entities.Post;
 import br.com.metaro.portal.modules.general.post.dto.PostDto;
 import br.com.metaro.portal.modules.general.post.repositories.PostRepository;
+import br.com.metaro.portal.modules.general.post.repositories.projections.PostProjection;
+import br.com.metaro.portal.util.picture.dto.PictureMinDto;
 import br.com.metaro.portal.util.smb.files.FileDto;
-import br.com.metaro.portal.util.smb.files.FileService;
+import br.com.metaro.portal.util.smb.files.FileRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.Cache;
 import org.springframework.cache.CacheManager;
@@ -19,12 +20,16 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
+import java.util.Comparator;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class InfoService {
     @Autowired
-    private FileService fileService;
+    private FileRepository fileRepository;
     @Autowired
     private EventService eventService;
     @Autowired
@@ -40,9 +45,8 @@ public class InfoService {
     @Transactional(readOnly = true)
     public HomeInfoDto getHomeInfo() {
         Long upcomingEvents = eventService.getEventsCount();
-        Long openOrders = 16L;
         Long openMemorandos = memorandoRepository.countByStatus(MemorandoStatus.PUBLISH);
-        List<FileDto> filesDto = fileService.getFiles();
+        List<FileDto> filesDto = fileRepository.findTop3ForHome();
 
         EventDto eventDto = eventService.getEvent();
 
@@ -51,17 +55,32 @@ public class InfoService {
                 .stream()
                 .map(BirthdayDto::new)
                 .toList();
+
         List<BirthdayDto> todayBirthdaysDto = allBirthdays.stream()
                 .filter(dto -> dto.getDay() == today.getDayOfMonth())
+                .sorted(Comparator.comparing(BirthdayDto::getDay))
                 .toList();
         List<BirthdayDto> monthBirthdaysDto = allBirthdays.stream()
                 .filter(dto -> dto.getDay() != today.getDayOfMonth())
+                .sorted(Comparator.comparing(BirthdayDto::getDay))
                 .toList();
 
-        List<Post> feed = postRepository.findTop4ByOrderByIdDesc();
-        List<PostDto> feedDto = feed.stream().map(PostDto::new).toList();
+        List<Long> top4Ids = postRepository.findTop4Ids();
+        List<PostProjection> rows = postRepository.findFeedByIds(top4Ids);
+        Map<Long, List<PostProjection>> grouped = rows.stream()
+                .collect(Collectors.groupingBy(PostProjection::getId, LinkedHashMap::new, Collectors.toList()));
+        List<PostDto> feedDto = grouped.values().stream()
+                .map(postRows -> {
+                    PostProjection first = postRows.getFirst();
+                    List<PictureMinDto> pictures = postRows.stream()
+                            .filter(r -> r.getPictureId() != null)
+                            .map(r -> new PictureMinDto(r.getPictureId()))
+                            .toList();
+                    return new PostDto(first, pictures);
+                })
+                .toList();
 
-        return new HomeInfoDto(upcomingEvents, openOrders, openMemorandos, filesDto, eventDto, monthBirthdaysDto,
+        return new HomeInfoDto(upcomingEvents, 16L, openMemorandos, filesDto, eventDto, monthBirthdaysDto,
                 todayBirthdaysDto, feedDto);
     }
 
